// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationTypes renders for FOCUS_STEP 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
          }
        }
      >
        key 'stepsNotification (en-TEST)' returned an object instead of string.
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;

exports[`notificationTypes renders for JOIN_CHALLENGE 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
          }
        }
      >
        We are excited that you are participating in a challenge! MissionHub would like to send you updates about this challenge.
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;

exports[`notificationTypes renders for JOIN_COMMUNITY 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
          }
        }
      >
        MissionHub would like to notify you about activity happening within your community.
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;

exports[`notificationTypes renders for LOGIN 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
          }
        }
      >
        We noticed you have accepted some steps. We'd like to send you handcrafted reminders so they don't get forgotten.
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;

exports[`notificationTypes renders for ONBOARDING 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "marginBottom": 88,
        }
      }
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        Allow notifications for
      </MyText>
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 24,
            "fontWeight": "300",
            "lineHeight": 30,
            "textAlign": "center",
          }
        }
      >
        reminders on steps of faith
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      style={
        Object {
          "marginBottom": 88,
        }
      }
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimerScreen.png",
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimerNotif.png",
          }
        }
        style={
          Object {
            "position": "absolute",
            "top": 120,
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;

exports[`notificationTypes renders for SET_REMINDER 1`] = `
<Flex
  style={
    Object {
      "backgroundColor": "#007398",
      "flex": 1,
      "justifyContent": "center",
      "paddingHorizontal": 40,
    }
  }
>
  <Flex
    value={0.3}
  />
  <Flex
    align="center"
    justify="center"
    value={1}
  >
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/images/notificationPrimer.png",
          }
        }
      />
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={0.6}
    >
      <MyText
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 16,
            "lineHeight": 24,
            "paddingTop": 15,
            "textAlign": "center",
          }
        }
      >
        We want to help you take this Step of Faith! In order to set a reminder we need to be able to send you notifications.
      </MyText>
    </Flex>
    <Flex
      align="center"
      justify="center"
      value={1}
    >
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "#52C5DC",
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="ALLOW NOTIFICATIONS"
        type="primary"
      />
      <Button
        buttonTextStyle={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "fontWeight": "500",
            "letterSpacing": 1.5,
          }
        }
        onPress={[Function]}
        pill={true}
        style={
          Object {
            "backgroundColor": "transparent",
            "borderColor": "#52C5DC",
            "borderWidth": 1,
            "height": 48,
            "margin": 8,
            "width": 680,
          }
        }
        text="NOT NOW"
      />
    </Flex>
  </Flex>
  <Flex
    value={0.3}
  />
</Flex>
`;
